--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_USER: marcode
-      POSTGRES_PASSWORD: marcodepass
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: pgpass
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
     ports:
       - "5432:5432"
     networks:
-      - postgres
+      - devnetwork
     restart: unless-stopped
 
   pgadmin:
@@ -26,11 +26,11 @@ services:
     ports:
       - "5050:80"
     networks:
-      - postgres
+      - devnetwork
     restart: unless-stopped
 
 networks:
-  postgres:
+  devnetwork:
     driver: bridge
 
 volumes:
