Fraud microservice added

--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
     name: customer
   datasource:
     password: pgpass
-    url: jdbc:postgresql://localhost:5432/customer
-    username: pguser
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
+    url: jdbc:postgresql://localhost:5432/customer #localhost because the app start on a local machine. else it would need to connect via the network
+    username: pguser                               #customer is the name of the database that we will have to connect to
+    jpa:
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.PostgreSQLDialect
+          format_sql: true
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-    show-sql: true
+        ddl-auto: update
+      show-sql: true
