--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5432:5432"
     networks:
-      - devnetwork
+      - postgres
     restart: unless-stopped
 
   pgadmin:
@@ -26,11 +26,11 @@ services:
     ports:
       - "5050:80"
     networks:
-      - devnetwork
+      - postgres
     restart: unless-stopped
 
 networks:
-  devnetwork:
+  postgres:
     driver: bridge
 
 volumes:
