--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
 
   <modules>
     <module>customer</module>
+    <module>fraud</module>
   </modules>
 
   <name>marcoservices</name>
-  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
