--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
         format_sql: true
     show-sql: true
   zipkin:
+    enabled: true
     base-url: http://localhost:9411
 eureka:
   client:
