--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
         format_sql: true
     show-sql: true
   zipkin:
+    enabled: true
     base-url: http://localhost:9411
   rabbitmq:
     addresses: localhost:5672
@@ -30,7 +31,7 @@ eureka:
 rabbitmq:
   exchanges:
     internal: internal.exchange
-  queue:
+  queues:
     notification: notification.queue
   routing-keys:
     internal-notification: internal.notification.routing-key
