--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
     <module>customer</module>
     <module>fraud</module>
     <module>eureka-server</module>
-      <module>clients</module>
+    <module>clients</module>
     <module>notification</module>
-      <module>api-gateway</module>
+    <module>api-gateway</module>
     <module>amqp</module>
   </modules>
 
@@ -29,6 +29,7 @@
     <spring.boot.dependencies.version>2.5.7</spring.boot.dependencies.version>
     <spring.cloud-version>2020.0.3</spring.cloud-version>
   </properties>
+
 
   <dependencyManagement><!-- All modules or sub-project will import the dependency that it want from here -->
     <dependencies>
@@ -66,11 +67,29 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
-          <groupId>com.springframework.boot</groupId>
+          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring.boot.maven.plugin.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>repackage</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins> <!-- By default, all sub-module will have this plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
