--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -20,6 +20,20 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies> <!-- All these dependencies comme from parent pom -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
